--- a/app/views/groks/_processing_audio.html.erb
+++ b/app/views/groks/_processing_audio.html.erb
@@ -8,7 +8,7 @@
 <h3><%= @favorite_quotes.quote %></h3>
 
 <div id="fav_quote_author">
-<p5>~ <%= @favorite_quotes.author %></p5>
+<p5>~ <%= @favorite_quotes.movie %> (<%= @favorite_quotes.year %>)</p5>
 </div>
 </div>
 </div>
