--- a/app/views/groks/_record_audio.html
+++ b/app/views/groks/_record_audio.html
@@ -137,7 +137,7 @@
             var key = 'uploads/'+("audio", blob, (new Date()).getTime() + ".wav");
             var audio = blob;
             var filename = ("audio", blob, (new Date()).getTime() + ".wav");
-            var url = 'https://s3.amazonaws.com/bookgroks.test/' + key;
+            var url = 'https://s3.amazonaws.com/moviegroksTest/' + key;
 
             function updateProgress(evt) 
                 {
