--- a/app/views/groks/new.html.erb
+++ b/app/views/groks/new.html.erb
@@ -8,24 +8,16 @@
     <%= form_for(@grok, remote: true, html: {:multipart => true, :id => 'new-grok-form'}) do |f| %>
         <%= render "shared/error_messages", object: f.object %> 
 
-    <%= f.fields_for :books do |book_attributes| %>
-      <%= render :partial => 'books/book_attributes', :locals => {f: book_attributes} %>
+    <%= f.fields_for :movies do |movie_attributes| %>
+      <%= render :partial => 'movies/movie_attributes', :locals => {f: movie_attributes} %>
     <% end %>
 
-<fieldset>
-  <div class="authorship">
-    <p><%= label_tag :authorship, "Are you the author?" %></p>
-    <%= f.check_box(:authorship, :name => "grok[authorship]", :id => "authorship") %>
-    <div id="author_message" style="display: none">By checking this box, you confirm that you're the author of the selected book.</div>
-    </div>
-  </fieldset>
   <br>
     
     <%= f.fields_for :themes do |theme_attributes| %>
       <%= render :partial => 'themes/theme_attributes', :locals => {f: theme_attributes} %>
     <% end %>
 
-    <%= render :partial => 'grok_title', :locals => {f: f} %><br>
 
     <div id="grok_audio_div"></div>
     <div id="success_div"></div>
