--- a/app/views/favorite_quotes/show.html.erb
+++ b/app/views/favorite_quotes/show.html.erb
@@ -8,8 +8,8 @@
 <div id="contain_quote">
 <h3><%= @favorite_quotes.quote %></h3>
 
-<div id="fav_quote_author">
-<p5>~ <%= @favorite_quotes.movie %>(<%= @favorite_quotes.year %>)</p5>
+<div id="fav_movie_quote">
+<p5>~ <%= @favorite_quotes.movie %> (<%= @favorite_quotes.year %>)</p>
 </div>
 </div></div>
 <br>
