--- a/app/views/groks/_processing_audio.html.erb
+++ b/app/views/groks/_processing_audio.html.erb
@@ -7,7 +7,7 @@
 <div id="contain_quote">
 <h3><%= @favorite_quotes.quote %></h3>
 
-<div id="fav_quote_author">
+<div id="fav_quote_movie">
 <p5>~ <%= @favorite_quotes.movie %> (<%= @favorite_quotes.year %>)</p5>
 </div>
 </div>
