--- a/app/views/movies/_addmovie.html.erb
+++ b/app/views/movies/_addmovie.html.erb
@@ -11,6 +11,9 @@
       <%= f.label :movie_image_url %>
       <%= f.text_field :movie_image_url %>
 
+      <%= f.label :year %>
+      <%= f.text_field :year %>
+
       <%= f.label :movie_trailer_url %>
       <%= f.text_field :movie_trailer_url %>
     
