--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,8 @@
 <title><%= full_title(yield(:title)) %></title>
-<h3><strong>About</strong></h3><br>
+<h3><strong>Why Moviegroks?</strong></h3>
 
-<p class="lead">Bookgroks is a fun way to learn from all the books you’ll never read. It’s also a new way to discover new books and authors, to be inspired, and to grow.</p>
+<p class="lead">There's a line in every movie that tells us everything we need to know about our culture, ourselves, and how the writer wants us to make sense of it all.</p>
 
-<p class="lead">We believe that it's the message not the medium that counts.</p>
+<p class="lead">Sometimes it's the lead character who gets to speak the meaning of the film; but often it's not. These are interesting choices that can reveal even more about what the writer wants the story to mean to us and whether or not we get it.</p>
 
-<p class="lead"><%= link_to 'Sign Up', signup_path %> now to start sharing your favorite <em>A'ha</em> moments from the books you love.</p>
-
-<p class="lead">For more details on getting started, visit our <%= link_to 'FAQs', faqs_path %> page.</p>
+<p class="lead">Moviegroks exists to nudge us to look at a story as more than just pure entertainment; and, instead, search for its meaning, uncover its message, and discover the reason this story had to be told and how we might be better for it.</p>
