--- a/app/views/static_pages/faqs.html.erb
+++ b/app/views/static_pages/faqs.html.erb
@@ -1,4 +1,4 @@
-<title><%= full_title(yield(:title)) %></title>
+<!-- <title><%= full_title(yield(:title)) %></title>
 <h3><strong>Frequently Asked Questions</strong></h3>
 
 <h3><strong>1. What exactly is a grok?</strong></h3>
@@ -33,4 +33,4 @@
 <h3><strong>9. I've heard myself saying things like 'grok it' and 'I'm grokking her book on my lunch hour'. Were you trying to create a thing?</strong></h3>
 <h1>:-) </h1>
 
-<h3><strong>So enough about us, read anything lately? If so, please <%= link_to 'Sign Up', signup_path %> now to start sharing your favorite <em>A'ha</em> moments from the books you love.</strong></h3>
+<h3><strong>So enough about us, read anything lately? If so, please <%= link_to 'Sign Up', signup_path %> now to start sharing your favorite <em>A'ha</em> moments from the books you love.</strong></h3> -->
