--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
-<title><%= full_title(yield(:title)) %></title>
+<!-- <title><%= full_title(yield(:title)) %></title>
 <h3><strong>Help</strong></h3>
 
 <h3><strong>I can't record in my browser.</strong></h3>
@@ -9,3 +9,4 @@
 
 <h3><strong>Additional questions or issues?</strong></h3>
 <p class="text-justify">Help us build this page by emailing them to help@bookgroks.com</p>
+ -->
