--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <title><%= full_title(yield(:title)) %></title>
 <div class="center">
   <h1>Moviegroks</h1>
-<h3>Because Good Stories Teach Us</h3>
+<h3>Because Good Stories Teach and Inspire</h3>
 <%= link_to "Learn More", about_path, class: "btn btn-learnmore" %>
 
  
