--- a/app/views/favorite_quotes/index.html.erb
+++ b/app/views/favorite_quotes/index.html.erb
@@ -11,20 +11,19 @@
 
   <tbody>
     <% @favorite_quotes.each do |favorite_quote| %>
-    
       <tr>
-      <h3><%= link_to favorite_quote.quote, favorite_quote %></h3>
-      <p5>~ <%= favorite_quote.author %></p5>
+      <h3> <i class="fa fa-quote-left"></i> <%= link_to favorite_quote.quote, favorite_quote %> <i class="fa fa-quote-right"></i></h3>
+      <p class="attribute">~ <%= favorite_quote.movie %> (<%= favorite_quote.year %>)</p>
+  </tbody>
+</table>
         <% if current_user.try(:admin?) %>
         <td><%= link_to 'Edit', edit_favorite_quote_path(favorite_quote) %></td>
         <td><%= link_to 'Destroy', favorite_quote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+<br><br>
   <% if current_user.try(:admin?) %>
 <%= link_to 'New Favorite quote', new_favorite_quote_path %>
 <% end %>
