--- a/app/views/groks/new.html.erb
+++ b/app/views/groks/new.html.erb
@@ -8,7 +8,7 @@
     <%= form_for(@grok, remote: true, html: {:multipart => true, :id => 'new-grok-form'}) do |f| %>
         <%= render "shared/error_messages", object: f.object %> 
 
-    <%= f.fields_for :movies do |movie_attributes| %>
+    <%= f.fields_for :movie_attributes do |movie_attributes| %>
       <%= render :partial => 'movies/movie_attributes', :locals => {f: movie_attributes} %>
     <% end %>
 
@@ -18,7 +18,7 @@
       <%= render :partial => 'themes/theme_attributes', :locals => {f: theme_attributes} %>
     <% end %>
 
-
+    <%= render :partial => 'grok_title', :locals => {f: f} %><br>
     <div id="grok_audio_div"></div>
     <div id="success_div"></div>
 
