--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,10 +6,10 @@
   <nav>
     <ul class="breadcrumb">
       <li><%= link_to "About",  about_path %></li>
-      <li><%= link_to "FAQs", faqs_path %></li>
-      <li><%= link_to "Help", help_path %></li>
+      <!-- <li><%= link_to "FAQs", faqs_path %></li> -->
+      <!-- <li><%= link_to "Help", help_path %></li> -->
       <li><%= link_to "Terms", terms_path %></li>
-      <li><%= link_to "Privacy", privacy_path %></li>
+     <li><%= link_to "Privacy", privacy_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
