--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <header class="navbar navbar-fixed-top" role="navigation">
  	<div class="container">
-	<%= link_to image_tag("bookgroks.logo.transparent.01.png", size: "74x105", alt: "Moviegroks"), root_path, id: "logo" %>
+	<h1><%= link_to "MG", root_path, id: "logo" %></h1>
 	
 	<span class="logo">
 	<p3>Moviegroks</p3>
 	</span>
 	<span class="tagline">
-	<p4>Because Good Stories Teach Us</p4>
+	<p4>Because Good Stories Teach and Inspire</p4>
 	</span>
 
 		<nav>
 		<div class="row">
 		<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav navbar-right">
+		<li id="fat-menu" class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						Menu <b class="caret"></b>
+					</a>
+				<ul class="dropdown-menu">
 				<li><%= link_to "Groks", groks_path %></li>
 				<li><%= link_to "Themes", themes_path %></li>
+				<li><%= link_to "Movies", movies_path %></li>
+				<li><%= link_to "Quotes", favorite_quotes_path %></li>	
+				</ul>
+				</li>
+			
 				<% if signed_in? %>
-				<li><%= link_to "Users", users_path %></li>
 				<li id="fat-menu" class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						Account <b class="caret"></b>
 					</a>
 				<ul class="dropdown-menu">
 						<li><%= link_to "New Grok", new_grok_path %></li>
-						<li><%= link_to "Profile", current_user %></li>	
 						<li><%= link_to "Settings", edit_user_path(current_user) %></li>
 						
 						<li class="divider"></li>
