--- a/app/views/movies/_movie_attributes.html.erb
+++ b/app/views/movies/_movie_attributes.html.erb
@@ -9,7 +9,7 @@
     <div id="toggle-grok-form1" class="collapse in">
   <fieldset>
      	<div id="scrollable-dropdown-menu">
-      <%= f.collection_select(:movie_id, Movie.all, :id, :title, :name => "grok[movie_attributes][title]") %>
+      <%= f.collection_select(:id, Movie.all, :id, :title) %>
       </div>
   </fieldset>
 
