--- a/app/views/movies/_addmovie.html.erb
+++ b/app/views/movies/_addmovie.html.erb
@@ -8,11 +8,14 @@
       <%= f.label :title %>
       <%= f.text_field :title %>
 
-      <%= f.label :movie_image_url %>
-      <%= f.text_field :movie_image_url %>
+      <%= f.label :summary %>
+      <%= f.text_field :summary %>
 
       <%= f.label :year %>
       <%= f.text_field :year %>
+
+      <%= f.label :movie_image_url %>
+      <%= f.text_field :movie_image_url %>
 
       <%= f.label :movie_trailer_url %>
       <%= f.text_field :movie_trailer_url %>
