--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,16 +1,26 @@
- <div class ="row">
-      <div class="span6 offset3">
-        <%= form_for(@movie, remote: true) do |f| %>
-        <% if @movie.errors.any? %>
-<%= render "shared/error_messages", object: f.object %>
-  
-<%= render "movies/addmovie" %>
+<form class="form-inline" role="form" 
+      <%= form_for(@movie) do |f| %>
+   <%= render "shared/error_messages", object: f.object %> 
+   
+   <div class="form-group">
+   	  <%= f.label :title %>
+      <%= f.text_field :title %>
+
+      <%= f.label :summary %>
+      <%= f.text_field :summary %>
+
+      <%= f.label :year %>
+      <%= f.text_field :year %>
+
+      <%= f.label :movie_image_url %>
+      <%= f.text_field :movie_image_url %>
+
+      <%= f.label :movie_trailer_url %>
+      <%= f.text_field :movie_trailer_url %>
 <div class="actions">
-    <%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <% end %>
+    <a href="/">Cancel</a>
 </div>
-
-</div>
-</div>
-
 <% end %>
-<% end %>
+</form>
