--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,13 +8,14 @@
         <%= link_to image_tag(movie.movie_image_url, size:"225x315"), movie %><br>
         <p class="wrap"><%= movie.title %> (<%= movie.year %>)</p>
 
-        <p>Groks <%= movie.groks.count %></p>
+        <p class="movie_summary"><i>Synopsis:</i><br><%= movie.summary %></p>
           <% if signed_in? && current_user.admin? %>
-            <span><%= link_to 'Delete', {:action => 'destroy', :id => movie.id}, method: :delete, data: {confirm: 'Are you sure you want to permanently delete this movie?'} %></span>
+          <span><%= link_to 'Edit', edit_movie_path(movie) %> | <%= link_to 'Delete', {:action => 'destroy', :id => movie.id}, method: :delete, data: {confirm: 'Are you sure you want to permanently delete this movie?'} %></span>
           <% end %>
 <br>
           
         </div> 
+       
         
       <% end %>
       </div> 
@@ -24,3 +25,6 @@
 <ul>
  <% will_paginate %>
 </ul>
+<% if current_user.try(:admin?) %>
+<%= link_to 'Add New', new_movie_path %>
+<% end %>
