--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,8 +3,9 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
 	<div class=" col-sm-4 col-md-2">
-		<img src="<%= @movie.movie_image_url %>" width="105" height="155" class="" border="0" alt="Medium Movie"/></br>
-		<a href="<%= @book.movie_trailer_url %>"><font color="#6CA7E1"><strong>Watch trailer on</font></strong><font color="F28846"> YouTube</font></a><span class="glyphicon glyphicon-share-alt btn-lg"></span>
+		<img src="<%= @movie.movie_image_url %>" width="125" height="175" class="" border="0" alt="Medium Movie"/></br>
+		<a href="<%= @movie.movie_trailer_url %>"><font color="#3CBBC9"><strong>Watch trailer on</font></strong><font color="#F73F31"> YouTube</font></a><span class="glyphicon glyphicon-share-alt btn-lg"></span>
+
 </br>
 
 </div>
