--- a/app/views/groks/_grok.html.erb
+++ b/app/views/groks/_grok.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-md-6 col-lg-6" id="groks">
+<!-- <div class="col-sm-6 col-md-6 col-lg-6" id="groks"> -->
   <ul class="groks">
         <div id="panel" class="panel panel-default">  
             <span class="theme"><h1><%= link_to grok.theme.keyword, grok.theme %></h1></span>   
@@ -41,4 +41,4 @@
     </div> 
     <%= render partial: "shared/grok_dropup", locals: { grok: grok} %> 
      
-  </div>
+ <!--  </div> -->
