--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,17 +14,12 @@
 		<div class="row">
 		<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav navbar-right">
-		<li id="fat-menu" class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-						Menu <b class="caret"></b>
-					</a>
-				<ul class="dropdown-menu">
+				<li><%= link_to "What's New", blogs_path %></li>
 				<li><%= link_to "Groks", groks_path %></li>
-				<li><%= link_to "Themes", themes_path %></li>
 				<li><%= link_to "Movies", movies_path %></li>
-				<li><%= link_to "Quotes", favorite_quotes_path %></li>	
-				</ul>
-				</li>
+				<li><%= link_to "Themes", themes_path %></li>		
+				<li><%= link_to "Movie Quotes", favorite_quotes_path %></li>	
+		
 			
 				<% if signed_in? %>
 				<li id="fat-menu" class="dropdown">
@@ -42,8 +37,6 @@
 						
 				</ul>
 				</li>
-				<% else %>
-					<li><%= link_to "Sign In", signin_path %></li>
 					<% end %>
 				</ul>
 			</div>
