--- a/app/views/groks/show.html.erb
+++ b/app/views/groks/show.html.erb
@@ -6,8 +6,10 @@
 		
  <% else %>
 		<div id="showGrok">
-			<div class="row">	
+			<div class="row">
+				<div class="col-sm-6 col-md-6 col-lg-6" id="groks"> 	
 			<%= render partial: 'grok', locals: {:grok => @grok} %>
+ 				</div>
  			</div>
 		</div>		
 <% end %>
