--- a/app/views/groks/show.html.erb
+++ b/app/views/groks/show.html.erb
@@ -6,10 +6,9 @@
 		
  <% else %>
 		<div id="showGrok">
-			<div class="row">
-				<div class="col-sm-6 col-md-6 col-lg-6" id="groks"> 	
+			<!-- <div class="row">	 -->
+			<div class="col-sm-6 col-md-6 col-lg-6" id="groks">
 			<%= render partial: 'grok', locals: {:grok => @grok} %>
- 				</div>
  			</div>
 		</div>		
 <% end %>
