--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,10 +4,11 @@
 </div>
 	<h3 class="post"><%= @blog.post %></h3>
 	<% @blog.movies.each do |movie| %>
-     		<div class="col-md-4 col-lg-4" id="groks">
+     		<div class="col-md-4 col-lg-4" id="blog">
          		 <%= render movie.groks %>
+         	</div>
 		<% end %>
-			</div>
+
 <br>
 <%= link_to 'Back', blogs_path %><br>
  <% if current_user.try(:admin?) %>
