--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -2,13 +2,11 @@
 <p id="notice"><%= notice %></p>
 <h3><%= @theme.keyword %></h3>
  <div class="row">
-  
-          
           <div id = "grok_div"></div>
+          	<div class="col-sm-6 col-md-6 col-lg-6" id="groks">
           <%= render @theme.groks %>
-
-</div>
-
+          	</div>
+ </div>
 <ul>
 <%= will_paginate @groks %>
 </ul>
