--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -3,10 +3,16 @@
 <h3><%= @theme.keyword %></h3>
  <div class="row">
           <div id = "grok_div"></div>
-          	<div class="col-sm-6 col-md-6 col-lg-6" id="groks">
-          <%= render @theme.groks %>
-          	</div>
- </div>
+         
+          <% @theme.groks.each_slice(2) do |grok| %>
+          	<div class="col-sm-12 col-md-6 col-lg-6">
+          	<div id="groks">
+          	<%= render grok %>
+			</div>
+			</div>
+		  <% end %>
+</div>
+
 <ul>
 <%= will_paginate @groks %>
 </ul>
