--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -2,15 +2,13 @@
 <p id="notice"><%= notice %></p>
 <h3><%= @theme.keyword %></h3>
  <div class="row">
-          <div id = "grok_div"></div>
-         
+ 		<div id="grok_div">
           <% @theme.groks.each_slice(2) do |grok| %>
-          	<div class="col-sm-12 col-md-6 col-lg-6">
-          	<div id="groks">
-          	<%= render grok %>
-			</div>
-			</div>
+        	 <div class="col-sm-12 col-md-6 col-lg-6" id="groks">
+          <%= render grok %>
+			 </div>
 		  <% end %>
+		  </div>
 </div>
 
 <ul>
