--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -17,6 +17,9 @@
 
       <%= f.label :movie_trailer_url %>
       <%= f.text_field :movie_trailer_url %>
+
+      <%= f.label :tag_list, "Tags (separated by commas)" %>
+      <%= f.text_field :tag_list %>
 <div class="actions">
   <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
       <% end %>
