--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -21,6 +21,9 @@
       <%= f.label :movie_trailer_url %>
       <%= f.text_field :movie_trailer_url %>
 
+      <%= f.label :tag_list, "Tags (separated by commas)" %>
+      <%= f.text_field :tag_list %>
+
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
       <% end %>
 
