added css and changed tagline

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 	<p3>Moviegroks</p3>
 	</span>
 	<span class="tagline">
-	<p4>Because Good Stories Teach and Inspire</p4>
+	<p4>Because Good Stories Make Us Feel<p4>
 	</span>
 
 		<nav>
