changed font color and weight tagcloud

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -816,7 +816,7 @@ p.movie_summary {
   text-align: center;
   }
   line-height: 1.6em;
-  .s { font-family: "Acrom-Thin"; font-size: 0.8em; color: darken(#3CBBC9, 5%)}
+  .s { font-family: "Acrom-Regular"; font-size: 0.8em; color: lighten(#3CBBC9, 3%)}
   .m { font-family: "Acrom-Thin"; font-size: 1.2em; color: lighten(#2A2739, 35%)}
   .l { font-family: "Acrom-Thin"; font-size: 1.8em; color: lighten(#F73F31, 5%)}
 }
